# SmartCppTasks

./: README.md
T1_pojazd/: CMakeLists.txt  main.cpp
T1_pojazd/vehicle/: CMakeLists.txt
T1_pojazd/vehicle/include/: AbstractVehicle.hpp  SamochodNaGaz.hpp
T1_pojazd/vehicle/src/: AbstractVehicle.cpp  SamochodNaGaz.cpp
T2_bitset/: bitset  main.cpp  tresc
T3_builder/: .clang-format  CMakeLists.txt  main.cpp  tresc_zadania
T3_builder/include/: RpgCharacter.hpp
T3_builder/src/: RpgCharacter.cpp
T4_kompozyt/: .clang-format  CMakeLists.txt  tresc_zadania
T4_kompozyt/Core/: main.cpp
T4_kompozyt/Core/include/: DepartmentComposite.hpp  PersonLeaf.hpp  WorkerInterace.hpp
T4_kompozyt/Core/src/: DepartmentComposite.cpp  PersonLeaf.cpp
